========================
0.0.60
========================

- added a validation for `Byte`, `TinyInt` and `SmallInt` types in the schemas
- fixed `COPY()` method
- fixed `default_root` config option for static files

========================
0.0.59
========================

- added `TESTER()` method for creating rich unit-tests by [Jakub Urban](https://github.com/Helferino)
- `LOAD()` supports promises (without callback argument)
- added missing Tangular helpers (CRITICAL)
- disabled snapshots for `LOAD()` method
- fixed executing `callback` in the `controller.autodestroy()` method
- added `default_websocket_maxlatency: 2000` configuration item
- added `F.runscript(filename)` for evaluating of JS scripts
- improved streaming files
- fixed `close` message in WebSocket
- extended `flowstreaminstance.close(removed)` delegate by adding `removed` argument
- exchanged functionality between `>field` (it performs `MAX`) `<field` (it performs `MIN`) in TextDB
- added `NOSQL/TABLe/TEXTDB().release()` method
- extended `controller.view()` by adding a support for rendering views from plugins (e.g. `#plugin_name/view_name`)
- extended `U.reader([url/items])` by adding support for `URL` addresses (content must be TextDB)
- added `U.filestreamer(filename)` for streaming text files
- fixed a custom path for `NPMINSTALL()`
- fixed linking `CONF.node_modules` path to the `F.require()` method
- fixed `.nocache()` in the release mode
- fixed loading apps if the plugin's `index.js` doesn't exist
- fixed removing of empty directories in the bundled mode
- fixed clearing cache for `EXEC()` method when updating/removing schema
- improved `UNAUTHORIZED()` method
- extended `NEWDB(name, [callback])` - nullable `callback` will remove the instance
- extended `next(content, replace, cache)` by adding `cache` argument to the `CMSRENDER()` method

========================
0.0.58
========================

- fixed Tangular compiler (CRITICAL)

========================
0.0.57